# RL-Snake

./: .gitignore  CLAUDE.md  Makefile  README.md  RL_snake.py  constant.py  pyproject.toml  pytest.ini  requirements.txt  snake_env.py  snake_ui.py  test.py  train.py  utils.py
config/: README.md  minimal_training.yaml  production_training.yaml  quick_training.yaml  training_config.yaml
docs/: CALLBACKS.md  ENTRY_POINTS.md  MODEL_STORAGE.md
models/PPO/: feature_extractor.dill  feature_extractor_kwargs.json
notebook/: rl-snake-py-V1.ipynb  rl-snake-py-V2.ipynb  snakegame.py  test.ipynb
notebook/save_logs/: events.out.tfevents.1752407272.mbp-de-dorian.home.11799.4  events.out.tfevents.1752407313.mbp-de-dorian.home.11799.5  events.out.tfevents.1752407563.mbp-de-dorian.home.11799.6  events.out.tfevents.1752407603.mbp-de-dorian.home.11799.7  events.out.tfevents.1752407623.mbp-de-dorian.home.11799.8  events.out.tfevents.1752407838.mbp-de-dorian.home.11799.9  events.out.tfevents.1752411814.mbp-de-dorian.home.14311.0  events.out.tfevents.1752412210.mbp-de-dorian.home.14311.1  events.out.tfevents.1752413124.mbp-de-dorian.home.14311.2  events.out.tfevents.1752426974.mbp-de-dorian.home.14311.4  events.out.tfevents.1752426985.mbp-de-dorian.home.14311.5  events.out.tfevents.1752427257.mbp-de-dorian.home.14311.6  events.out.tfevents.1752427623.mbp-de-dorian.home.14311.7  events.out.tfevents.1752428359.mbp-de-dorian.home.14311.8  events.out.tfevents.1752428990.mbp-de-dorian.home.19328.0  events.out.tfevents.1752429377.mbp-de-dorian.home.19328.1  events.out.tfevents.1752429392.mbp-de-dorian.home.19328.2  events.out.tfevents.1752429476.mbp-de-dorian.home.19328.3  events.out.tfevents.1752521127.mbp-de-dorian.home.19931.0  events.out.tfevents.1752521313.mbp-de-dorian.home.19931.1  (+8 more)
notebooks/: rl-snake-py-V1.ipynb  rl-snake-py-V2.ipynb
save_logs/: events.out.tfevents.1701446288.d45e0850e345.47.15  events.out.tfevents.1701889496.MacBook-Pro-de-Dorian.local.60458.0  events.out.tfevents.1701889826.MacBook-Pro-de-Dorian.local.60544.0  events.out.tfevents.1701889985.MacBook-Pro-de-Dorian.local.60665.0  events.out.tfevents.1701890084.MacBook-Pro-de-Dorian.local.60688.0  events.out.tfevents.1752526736.mbp-de-dorian.home.28047.0  events.out.tfevents.1752527054.mbp-de-dorian.home.28737.0  events.out.tfevents.1752527322.mbp-de-dorian.home.29402.0  events.out.tfevents.1752527432.mbp-de-dorian.home.29792.0  events.out.tfevents.1752527536.mbp-de-dorian.home.30136.0  events.out.tfevents.1752531363.mbp-de-dorian.home.36038.0  events.out.tfevents.1752531417.mbp-de-dorian.home.36363.0  events.out.tfevents.1752588093.DESKTOP-1ADSA9H.5776.0  events.out.tfevents.1752589859.DESKTOP-1ADSA9H.18220.0  events.out.tfevents.1752590905.DESKTOP-1ADSA9H.18276.0  events.out.tfevents.1752591850.DESKTOP-1ADSA9H.7000.0
scripts/: evaluate.py  play.py  play_agents.py  play_snake.py  train.py
snake_game/: fast_snake.py
src/constant/: __init__.py
tests/: README.md  __init__.py  test_environment.py  test_snake_game.py
(+22 files in other folders)
